--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <TITLE>draw line(please click)</TITLE>
 </HEAD>
 <BODY>
-<canvas id="canvas" width=1920px height=1080px>
+<div id="container" style="height: 100%; width: 100%">
+<canvas id="canvas">
+</div>
 </canvas>
 <script type="text/javascript" src="script.js"></script>
 </BODY>
